--- a/sample.html
+++ b/sample.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>formula 1 portfolio</title>
-	<link rel="stylesheet" type="text/css" href="/css/reset.css">
+	<link rel="stylesheet" type="text/css" href="./css/reset.css">
 <link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans" rel="stylesheet"></head>
 <body>
 <style type="text/css">
