--- a/sample.html
+++ b/sample.html
@@ -140,6 +140,6 @@ tr:hover{
 }
 </style>
 <div id="app"></div>
-<script type="text/javascript" src="/public/bundle.js"></script>
+<script type="text/javascript" src="./public/bundle.js"></script>
 </body>
 </html>
